--- a/PytorchZeroToMastery/0_Fundamentals.ipynb
+++ b/PytorchZeroToMastery/0_Fundamentals.ipynb
@@ -150,47 +150,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "random tensor tensor([[[0.1544, 0.5378],\n",
-      "         [0.7764, 0.2216],\n",
-      "         [0.4070, 0.9742],\n",
-      "         [0.1582, 0.0133],\n",
-      "         [0.2326, 0.7428],\n",
-      "         [0.9033, 0.3296]],\n",
+      "random tensor tensor([[[0.4307, 0.2389],\n",
+      "         [0.5956, 0.0937],\n",
+      "         [0.1541, 0.5429],\n",
+      "         [0.9448, 0.5986],\n",
+      "         [0.6958, 0.9794],\n",
+      "         [0.3824, 0.6893]],\n",
       "\n",
-      "        [[0.4766, 0.3484],\n",
-      "         [0.9352, 0.7411],\n",
-      "         [0.5393, 0.6388],\n",
-      "         [0.2985, 0.1923],\n",
-      "         [0.0441, 0.2294],\n",
-      "         [0.2552, 0.0138]],\n",
+      "        [[0.3098, 0.0373],\n",
+      "         [0.4739, 0.3444],\n",
+      "         [0.9414, 0.5594],\n",
+      "         [0.7223, 0.2942],\n",
+      "         [0.8300, 0.7810],\n",
+      "         [0.0680, 0.2884]],\n",
       "\n",
-      "        [[0.5408, 0.7326],\n",
-      "         [0.7095, 0.9597],\n",
-      "         [0.1172, 0.7471],\n",
-      "         [0.0460, 0.5365],\n",
-      "         [0.4647, 0.4979],\n",
-      "         [0.4478, 0.4112]],\n",
+      "        [[0.6441, 0.3882],\n",
+      "         [0.0280, 0.7789],\n",
+      "         [0.2986, 0.6317],\n",
+      "         [0.2831, 0.1002],\n",
+      "         [0.1677, 0.1790],\n",
+      "         [0.3273, 0.5293]],\n",
       "\n",
-      "        [[0.2988, 0.0769],\n",
-      "         [0.3847, 0.0442],\n",
-      "         [0.6183, 0.1399],\n",
-      "         [0.1668, 0.2853],\n",
-      "         [0.7303, 0.8089],\n",
-      "         [0.9080, 0.0364]],\n",
+      "        [[0.1291, 0.2323],\n",
+      "         [0.1903, 0.8331],\n",
+      "         [0.9530, 0.7669],\n",
+      "         [0.2085, 0.2488],\n",
+      "         [0.5345, 0.1736],\n",
+      "         [0.4895, 0.2884]],\n",
       "\n",
-      "        [[0.1667, 0.2444],\n",
-      "         [0.0816, 0.1475],\n",
-      "         [0.3878, 0.4470],\n",
-      "         [0.2530, 0.1635],\n",
-      "         [0.2848, 0.3020],\n",
-      "         [0.5973, 0.7015]],\n",
+      "        [[0.3405, 0.2868],\n",
+      "         [0.2485, 0.3532],\n",
+      "         [0.3673, 0.4042],\n",
+      "         [0.5670, 0.9519],\n",
+      "         [0.4081, 0.4748],\n",
+      "         [0.4492, 0.9510]],\n",
       "\n",
-      "        [[0.9499, 0.6671],\n",
-      "         [0.1772, 0.5632],\n",
-      "         [0.2514, 0.5429],\n",
-      "         [0.0723, 0.9229],\n",
-      "         [0.8144, 0.4595],\n",
-      "         [0.3819, 0.3197]]])\n",
+      "        [[0.3593, 0.1143],\n",
+      "         [0.7582, 0.3283],\n",
+      "         [0.9174, 0.8725],\n",
+      "         [0.7400, 0.9519],\n",
+      "         [0.8243, 0.1497],\n",
+      "         [0.1073, 0.7014]]])\n",
       "n dims 3\n",
       "shape torch.Size([6, 6, 2])\n"
      ]
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,16 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1572, 0.4071, 0.5923, 0.2357],\n",
-      "        [0.3150, 0.9647, 0.5689, 0.0611],\n",
-      "        [0.2971, 0.9480, 0.6374, 0.5281]])\n",
+      "tensor([[3.9503e-01, 9.3234e-01, 9.4042e-01, 5.7651e-01],\n",
+      "        [2.8262e-01, 4.9449e-01, 7.7838e-02, 7.9192e-01],\n",
+      "        [7.0347e-03, 5.6980e-01, 3.1739e-04, 6.0190e-01]])\n",
       "Shape of tensor: torch.Size([3, 4])\n",
       "Datatype of tensor: torch.float32\n",
       "Device tensor is stored on: cpu\n"
@@ -314,7 +314,431 @@
     "print(some_tensor)\n",
     "print(f\"Shape of tensor: {some_tensor.shape}\")\n",
     "print(f\"Datatype of tensor: {some_tensor.dtype}\")\n",
-    "print(f\"Device tensor is stored on: {some_tensor.device}\") # will default to CPU"
+    "print(f\"Device tensor is stored on: {some_tensor.device}\")  # will default to CPU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Matrix Multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor\n",
+      "tensor([[1, 2, 3],\n",
+      "        [6, 9, 3]])\n",
+      "n dims 2\n",
+      "shape torch.Size([2, 3])\n",
+      "element wise addition + 10\n",
+      "tensor([[11, 12, 13],\n",
+      "        [16, 19, 13]])\n",
+      "element wise multiplication * 1.2\n",
+      "tensor([[ 1.2000,  2.4000,  3.6000],\n",
+      "        [ 7.2000, 10.8000,  3.6000]])\n",
+      "element wise multiplication * tensor\n",
+      "tensor([[ 1,  4,  9],\n",
+      "        [36, 81,  9]])\n",
+      "matrix multiplication\n",
+      "tensor([[ 14,  33],\n",
+      "        [ 33, 126]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tensor of values and add a number to it\n",
+    "tensor = torch.tensor([[1, 2, 3], [6, 9, 3]])\n",
+    "print(\"tensor\", tensor, sep=\"\\n\")\n",
+    "print(\"n dims\", tensor.ndim)\n",
+    "print(\"shape\", tensor.shape)\n",
+    "\n",
+    "# element wise addition\n",
+    "print(\"element wise addition + 10\", tensor + 10, sep=\"\\n\")\n",
+    "\n",
+    "# element wise multiplication\n",
+    "print(\"element wise multiplication * 1.2\", tensor * 1.2, sep=\"\\n\")\n",
+    "print(\"element wise multiplication * tensor\", tensor * tensor, sep=\"\\n\")\n",
+    "\n",
+    "# matrix multiplication\n",
+    "print(\"matrix multiplication\", torch.matmul(tensor, tensor.T), sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n dims tensor A: 2\n",
+      "Input shape: torch.Size([3, 2])\n",
+      "\n",
+      "Output:\n",
+      "tensor([[ 2.0554,  1.0336,  0.6755,  0.5908, -0.7443,  1.0595,  0.3882],\n",
+      "        [ 4.3104,  2.0014,  0.6511,  0.7328, -0.5351,  2.5535,  1.6245],\n",
+      "        [ 6.5654,  2.9692,  0.6266,  0.8749, -0.3259,  4.0474,  2.8609]],\n",
+      "       grad_fn=<AddmmBackward0>)\n",
+      "\n",
+      "Output shape: torch.Size([3, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear layer example\n",
+    "# Since the linear layer starts with a random weights matrix, let's make it reproducible (more on this later)\n",
+    "torch.manual_seed(42)\n",
+    "tensor_A = torch.tensor([[1, 2], [3, 4], [5, 6]], dtype=torch.float32)\n",
+    "print(\"n dims tensor A:\", tensor_A.ndim)\n",
+    "# This uses matrix multiplication\n",
+    "linear = torch.nn.Linear(\n",
+    "    in_features=2,\n",
+    "    out_features=7,  # in_features = matches inner dimension of input\n",
+    ")  # out_features = describes outer value\n",
+    "x = tensor_A\n",
+    "output = linear(x)\n",
+    "print(f\"Input shape: {x.shape}\\n\")\n",
+    "print(f\"Output:\\n{output}\\n\\nOutput shape: {output.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Positional min/max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor: tensor([10, 20, 30, 40, 50, 60, 70, 80, 90])\n",
+      "Index where max value occurs: 8\n",
+      "Index where min value occurs: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "tensor = torch.arange(10, 100, 10)\n",
+    "print(f\"Tensor: {tensor}\")\n",
+    "\n",
+    "# Returns index of max and min values\n",
+    "print(f\"Index where max value occurs: {tensor.argmax()}\")\n",
+    "print(f\"Index where min value occurs: {tensor.argmin()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshaping, stacking, squeezing and unsqueezing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor:  tensor([1., 2., 3., 4., 5., 6., 7.])\n",
+      "shape:  torch.Size([7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tensor\n",
+    "import torch\n",
+    "\n",
+    "x = torch.arange(1.0, 8.0)\n",
+    "print(\"tensor: \", x)\n",
+    "print(\"shape: \", x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor with extra dim:  tensor([[1., 2., 3., 4., 5., 6., 7.]])\n",
+      "shape:  torch.Size([1, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add an extra dimension\n",
+    "x_reshaped = x.reshape(1, 7)\n",
+    "print(\"tensor with extra dim: \", x_reshaped)\n",
+    "print(\"shape: \", x_reshaped.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor z:  tensor([[1., 2., 3., 4., 5., 6., 7.]])\n",
+      "shape:  torch.Size([1, 7])\n",
+      "tensor z:  tensor([[5., 2., 3., 4., 5., 6., 7.]])\n",
+      "tensor x:  tensor([5., 2., 3., 4., 5., 6., 7.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Change view (keeps same data as original but changes view)\n",
+    "# See more: https://stackoverflow.com/a/54507446/7900723\n",
+    "z = x.view(1, 7)\n",
+    "print(\"tensor z: \", z)\n",
+    "print(\"shape: \", z.shape)\n",
+    "\n",
+    "# Changing z changes x\n",
+    "z[:, 0] = 5\n",
+    "print(\"tensor z: \", z)\n",
+    "print(\"tensor x: \", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stacked tensor:  tensor([[5., 2., 3., 4., 5., 6., 7.],\n",
+      "        [5., 2., 3., 4., 5., 6., 7.],\n",
+      "        [5., 2., 3., 4., 5., 6., 7.],\n",
+      "        [5., 2., 3., 4., 5., 6., 7.]])\n",
+      "shape:  torch.Size([4, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Stack tensors on top of each other\n",
+    "x_stacked = torch.stack(\n",
+    "    [x, x, x, x], dim=0\n",
+    ")  # try changing dim to dim=1 and see what happens\n",
+    "print(\"stacked tensor: \", x_stacked)\n",
+    "print(\"shape: \", x_stacked.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "previous tensor: tensor([[5., 2., 3., 4., 5., 6., 7.]])\n",
+      "shape: torch.Size([1, 7])\n",
+      "squeezed tensor: tensor([5., 2., 3., 4., 5., 6., 7.])\n",
+      "shape: torch.Size([7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove extra dimension from x_reshaped\n",
+    "print(f\"previous tensor: {x_reshaped}\")\n",
+    "print(f\"shape: {x_reshaped.shape}\")\n",
+    "x_squeezed = x_reshaped.squeeze()\n",
+    "print(f\"squeezed tensor: {x_squeezed}\")\n",
+    "print(f\"shape: {x_squeezed.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "previous tensor: tensor([5., 2., 3., 4., 5., 6., 7.])\n",
+      "shape: torch.Size([7])\n",
+      "unsqueezed tensor: tensor([[5., 2., 3., 4., 5., 6., 7.]])\n",
+      "shape: torch.Size([1, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"previous tensor: {x_squeezed}\")\n",
+    "print(f\"shape: {x_squeezed.shape}\")\n",
+    "\n",
+    "## Add an extra dimension with unsqueeze\n",
+    "x_unsqueezed = x_squeezed.unsqueeze(dim=0)\n",
+    "print(f\"unsqueezed tensor: {x_unsqueezed}\")\n",
+    "print(f\"shape: {x_unsqueezed.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "previous shape: torch.Size([224, 225, 3])\n",
+      "new shape: torch.Size([3, 224, 225])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create tensor with specific shape\n",
+    "x_original = torch.rand(size=(224, 225, 3))\n",
+    "\n",
+    "# Permute the original tensor to rearrange the axis order\n",
+    "x_permuted = x_original.permute(2, 0, 1)  # shifts axis 0->1, 1->2, 2->0\n",
+    "\n",
+    "print(f\"previous shape: {x_original.shape}\")\n",
+    "print(f\"new shape: {x_permuted.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyTorch tensors & NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np:  [1. 2. 3. 4. 5. 6. 7.]\n",
+      "torch:  tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NumPy array to tensor\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "\n",
+    "array = np.arange(1.0, 8.0)\n",
+    "tensor = torch.from_numpy(array)\n",
+    "\n",
+    "print(\"np: \", array)\n",
+    "print(\"torch: \", tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np:  [1. 1. 1. 1. 1. 1. 1.]\n",
+      "torch:  tensor([1., 1., 1., 1., 1., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tensor to NumPy array\n",
+    "tensor = torch.ones(7)  # create a tensor of ones with dtype=float32\n",
+    "numpy_tensor = tensor.numpy()  # will be dtype=float32 unless changed\n",
+    "print(\"np: \", numpy_tensor)\n",
+    "print(\"torch: \", tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reproducibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "are they equal?:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[True, True, True],\n",
+       "         [True, True, True],\n",
+       "         [True, True, True]],\n",
+       "\n",
+       "        [[True, True, True],\n",
+       "         [True, True, True],\n",
+       "         [True, True, True]],\n",
+       "\n",
+       "        [[True, True, True],\n",
+       "         [True, True, True],\n",
+       "         [True, True, True]]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# # Set the random seed\n",
+    "RANDOM_SEED = 42  # try changing this to different values and see what happens to the numbers below\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "A = torch.rand((3, 3, 3))\n",
+    "\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "B = torch.rand((3, 3, 3))\n",
+    "\n",
+    "print(\"are they equal?:\")\n",
+    "A==B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises"
    ]
   },
   {
