--- a/PytorchZeroToMastery/0_Fundamentals.ipynb
+++ b/PytorchZeroToMastery/0_Fundamentals.ipynb
@@ -731,7 +731,7 @@
     "B = torch.rand((3, 3, 3))\n",
     "\n",
     "print(\"are they equal?:\")\n",
-    "A==B"
+    "A == B"
    ]
   },
   {
@@ -743,10 +743,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7f15ea69a4f0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "torch.manual_seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.7576, 0.2793, 0.4031, 0.7347, 0.0293, 0.7999, 0.3971],\n",
+       "         [0.7544, 0.5695, 0.4388, 0.6387, 0.5247, 0.6826, 0.3051],\n",
+       "         [0.4635, 0.4550, 0.5725, 0.4980, 0.9371, 0.6556, 0.3138],\n",
+       "         [0.1980, 0.4162, 0.2843, 0.3398, 0.5239, 0.7981, 0.7718],\n",
+       "         [0.0112, 0.8100, 0.6397, 0.9743, 0.8300, 0.0444, 0.0246],\n",
+       "         [0.2588, 0.9391, 0.4167, 0.7140, 0.2676, 0.9906, 0.2885],\n",
+       "         [0.8750, 0.5059, 0.2366, 0.7570, 0.2346, 0.6471, 0.3556]]),\n",
+       " torch.Size([7, 7]))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. random tensor with shape (7,7)\n",
+    "\n",
+    "X = torch.rand((7, 7))\n",
+    "X, X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[2.1819],\n",
+       "         [2.1090],\n",
+       "         [2.0406],\n",
+       "         [2.1226],\n",
+       "         [1.3201],\n",
+       "         [2.1429],\n",
+       "         [2.1000]]),\n",
+       " torch.Size([7, 1]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. perform a matrix multiplication from tensor X with another of shape (1,7)\n",
+    "\n",
+    "Y = torch.rand((1, 7))\n",
+    "Z = torch.matmul(X, Y.T)\n",
+    "Z, Z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[1.8542],\n",
+       "         [1.9611],\n",
+       "         [2.2884],\n",
+       "         [3.0481],\n",
+       "         [1.7067],\n",
+       "         [2.5290],\n",
+       "         [1.7989]]),\n",
+       " torch.Size([7, 1]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. set seed to 0 and run previous excercises\n",
+    "torch.manual_seed(0)\n",
+    "X = torch.rand((7, 7))\n",
+    "\n",
+    "Y = torch.rand((1, 7))\n",
+    "Z = torch.matmul(X, Y.T)\n",
+    "\n",
+    "Z, Z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 4. GPU equivalent of random seed\n",
+    "torch.cuda.manual_seed(1234)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.0290, 0.4019, 0.2598],\n",
+       "         [0.3666, 0.0583, 0.7006]]),\n",
+       " tensor([[0.0518, 0.4681, 0.6738],\n",
+       "         [0.3315, 0.7837, 0.5631]]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5. Create two random tensors of shape (2, 3) and send them both to the GPU\n",
+    "# (you'll need access to a GPU for this).\n",
+    "# Set torch.manual_seed(1234) when creating the tensors\n",
+    "\n",
+    "torch.manual_seed(1234)\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "A = torch.rand((2, 3)).to(device)\n",
+    "B = torch.rand((2, 3)).to(device)\n",
+    "\n",
+    "A, B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.3647, 0.4709],\n",
+       "         [0.5184, 0.5617]]),\n",
+       " torch.Size([2, 2]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6. Perform a matrix multiplication on the tensors\n",
+    "C = A @ B.T\n",
+    "C, C.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max: 0.5617256760597229\n",
+      "min: 0.3647301495075226\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7. Find the maximum and minimum values\n",
+    "print(f\"max: {torch.max(C)}\")\n",
+    "print(f\"min: {torch.min(C)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "idx of max: 3\n",
+      "idx of min: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8. Find the index of the maximum and minimum values\n",
+    "print(f\"idx of max: {torch.argmax(C)}\")\n",
+    "print(f\"idx of min: {torch.argmin(C)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first tensor\n",
+      " tensor([[[[0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297,\n",
+      "           0.3653, 0.8513]]]]) torch.Size([1, 1, 1, 10])\n",
+      "second tensor\n",
+      " tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
+      "        0.8513]) torch.Size([10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make a random tensor with shape (1, 1, 1, 10)\n",
+    "# and then create a new tensor with all the 1 dimensions removed\n",
+    "# to be left with a tensor of shape (10).\n",
+    "# Set the seed to 7 when you create it and print out the first tensor\n",
+    "# and it's shape as well as the second tensor and it's shape.\n",
+    "\n",
+    "torch.manual_seed(7)\n",
+    "\n",
+    "M = torch.rand((1, 1, 1, 10))\n",
+    "N = M.squeeze()\n",
+    "\n",
+    "print(\"first tensor\\n\", M, M.shape)\n",
+    "print(\"second tensor\\n\", N, N.shape)"
+   ]
   }
  ],
  "metadata": {
