--- a/PytorchZeroToMastery/2_NNClassification.ipynb
+++ b/PytorchZeroToMastery/2_NNClassification.ipynb
@@ -226,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc907313eb0>"
+       "<matplotlib.collections.PathCollection at 0x7f631712e9e0>"
       ]
      },
      "execution_count": 6,
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -336,6 +336,88 @@
     "\n",
     "X[:5], y[:5]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split data into train and test\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=91021\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Building the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CircleModelV0(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # takes in 2 features (X) and produces 5 features\n",
+    "        self.layer_1 = nn.Linear(in_features=2, out_features=5)\n",
+    "        # takes in 5 features (hidden units) and produces 1 feature (y)\n",
+    "        self.layer_2 = nn.Linear(in_features=5, out_features=1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.layer_2(self.layer_1(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CircleModelV0(\n",
+       "  (layer_1): Linear(in_features=2, out_features=5, bias=True)\n",
+       "  (layer_2): Linear(in_features=5, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_0 = CircleModelV0().to(device)\n",
+    "model_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
