--- a/PytorchZeroToMastery/2_NNClassification.ipynb
+++ b/PytorchZeroToMastery/2_NNClassification.ipynb
@@ -414,10 +414,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of predictions: 200, Shape: torch.Size([200, 1])\n",
+      "Length of test samples: 200, Shape: torch.Size([200])\n",
+      "\n",
+      "First 10 predictions:\n",
+      "tensor([[ 0.0719],\n",
+      "        [ 0.7431],\n",
+      "        [-0.0718],\n",
+      "        [ 0.5848],\n",
+      "        [ 0.3984],\n",
+      "        [-0.0535],\n",
+      "        [ 0.2071],\n",
+      "        [ 0.1292],\n",
+      "        [ 0.5821],\n",
+      "        [ 0.2687]], grad_fn=<SliceBackward0>)\n",
+      "\n",
+      "First 10 test labels:\n",
+      "tensor([0., 0., 0., 1., 1., 0., 0., 0., 1., 1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make some predictions with the model\n",
+    "untrained_preds = model_0(X_test.to(device))\n",
+    "print(f\"Length of predictions: {len(untrained_preds)}, Shape: {untrained_preds.shape}\")\n",
+    "print(f\"Length of test samples: {len(y_test)}, Shape: {y_test.shape}\")\n",
+    "print(f\"\\nFirst 10 predictions:\\n{untrained_preds[:10]}\")\n",
+    "print(f\"\\nFirst 10 test labels:\\n{y_test[:10]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a loss function\n",
+    "loss_fn = nn.BCEWithLogitsLoss()\n",
+    "# create optimizer\n",
+    "optimizer = torch.optim.SGD(params=model_0.parameters(), lr=0.1)"
+   ]
   }
  ],
  "metadata": {
