--- a/PytorchZeroToMastery/2_NNClassification.ipynb
+++ b/PytorchZeroToMastery/2_NNClassification.ipynb
@@ -21,14 +21,14 @@
     "\n",
     "torch.set_default_dtype(torch.float32)\n",
     "torch.manual_seed(91021)\n",
-    "torch.__version__\n"
+    "torch.__version__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Make classification data"
+    "# 1. Make classification data\n"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "n_samples = 1000\n",
     "\n",
     "# create circles\n",
-    "X, y = make_circles(n_samples, noise=0.03, random_state=91021)\n"
+    "X, y = make_circles(n_samples, noise=0.03, random_state=91021)"
    ]
   },
   {
@@ -69,7 +69,7 @@
    ],
    "source": [
     "print(f\"First 5 X features:\\n{X[:5]}\")\n",
-    "print(f\"\\nFirst 5 y labels:\\n{y[:5]}\")\n"
+    "print(f\"\\nFirst 5 y labels:\\n{y[:5]}\")"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "import pandas as pd\n",
     "\n",
     "circles = pd.DataFrame({\"X1\": X[:, 0], \"X2\": X[:, 1], \"label\": y})\n",
-    "circles.head(10)\n"
+    "circles.head(10)"
    ]
   },
   {
@@ -215,7 +215,7 @@
    ],
    "source": [
     "# check different labels count\n",
-    "circles.label.value_counts()\n"
+    "circles.label.value_counts()"
    ]
   },
   {
@@ -247,14 +247,14 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.scatter(x=X[:, 0], y=X[:, 1], c=y)\n"
+    "plt.scatter(x=X[:, 0], y=X[:, 1], c=y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 input and output shapes"
+    "## 1.1 input and output shapes\n"
    ]
   },
   {
@@ -275,7 +275,7 @@
    ],
    "source": [
     "# check the shapes of inputs and labels\n",
-    "X.shape, y.shape\n"
+    "X.shape, y.shape"
    ]
   },
   {
@@ -297,16 +297,14 @@
     "X_sample = X[0]\n",
     "y_sample = y[0]\n",
     "print(f\"Values for one sample of X: {X_sample} and the same for y: {y_sample}\")\n",
-    "print(\n",
-    "    f\"Shapes for one sample of X: {X_sample.shape} and the same for y: {y_sample.shape}\"\n",
-    ")\n"
+    "print(f\"Shapes for one sample of X: {X_sample.shape} and the same for y: {y_sample.shape}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 turn data into tensors and create splits"
+    "## 1.2 turn data into tensors and create splits\n"
    ]
   },
   {
@@ -334,7 +332,7 @@
     "X = torch.from_numpy(X).type(torch.float)\n",
     "y = torch.from_numpy(y).type(torch.float)\n",
     "\n",
-    "X[:5], y[:5]\n"
+    "X[:5], y[:5]"
    ]
   },
   {
@@ -346,16 +344,14 @@
     "# split data into train and test\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=91021\n",
-    ")\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=91021)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Building the model"
+    "# 2. Building the model\n"
    ]
   },
   {
@@ -367,7 +363,7 @@
     "import torch\n",
     "from torch import nn\n",
     "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n"
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
    ]
   },
   {
@@ -385,7 +381,7 @@
     "        self.layer_2 = nn.Linear(in_features=5, out_features=1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return self.layer_2(self.layer_1(x))\n"
+    "        return self.layer_2(self.layer_1(x))"
    ]
   },
   {
@@ -409,7 +405,7 @@
    ],
    "source": [
     "model_0 = CircleModelV0().to(device)\n",
-    "model_0\n"
+    "model_0"
    ]
   },
   {
@@ -447,7 +443,7 @@
     "print(f\"Length of predictions: {len(untrained_preds)}, Shape: {untrained_preds.shape}\")\n",
     "print(f\"Length of test samples: {len(y_test)}, Shape: {y_test.shape}\")\n",
     "print(f\"\\nFirst 10 predictions:\\n{untrained_preds[:10]}\")\n",
-    "print(f\"\\nFirst 10 test labels:\\n{y_test[:10]}\")\n"
+    "print(f\"\\nFirst 10 test labels:\\n{y_test[:10]}\")"
    ]
   },
   {
@@ -459,7 +455,7 @@
     "# create a loss function\n",
     "loss_fn = nn.BCEWithLogitsLoss()\n",
     "# create optimizer\n",
-    "optimizer = torch.optim.SGD(params=model_0.parameters(), lr=0.1)\n"
+    "optimizer = torch.optim.SGD(params=model_0.parameters(), lr=0.1)"
    ]
   },
   {
@@ -472,21 +468,21 @@
     "    # compare two tensors\n",
     "    correct = torch.eq(y_true, y_pred).sum().item()\n",
     "    acc = (correct / len(y_pred)) * 100\n",
-    "    return acc\n"
+    "    return acc"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Trainmodel"
+    "# 3. Trainmodel\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 how it works"
+    "## 3.1 how it works\n"
    ]
   },
   {
@@ -512,7 +508,7 @@
    "source": [
     "# view of the first 10 outputs of the forward pass on the test data\n",
     "y_logits = model_0(X_test.to(device))[:5]\n",
-    "y_logits\n"
+    "y_logits"
    ]
   },
   {
@@ -538,7 +534,7 @@
    "source": [
     "# use sigmoid on model logits\n",
     "y_pred_probs = torch.sigmoid(y_logits)\n",
-    "y_pred_probs\n"
+    "y_pred_probs"
    ]
   },
   {
@@ -569,14 +565,14 @@
     "y_preds = torch.round(y_pred_probs)\n",
     "y_pred_labels = torch.round(torch.sigmoid(model_0(X_test.to(device))[:5]))\n",
     "print(torch.eq(y_preds.squeeze(), y_pred_labels.squeeze()))\n",
-    "y_preds.squeeze()\n"
+    "y_preds.squeeze()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 building a training and testing loop"
+    "## 3.2 building a training and testing loop\n"
    ]
   },
   {
@@ -645,14 +641,14 @@
     "    if epoch % 10 == 0:\n",
     "        print(\n",
     "            f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test Loss: {test_loss:.5f}, Test Acc: {test_acc:.2f}%\"\n",
-    "        )\n"
+    "        )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Make predictions"
+    "# 4. Make predictions\n"
    ]
   },
   {
@@ -683,7 +679,7 @@
     "    with open(\"helper_functions.py\", \"wb\") as f:\n",
     "        f.write(request.content)\n",
     "\n",
-    "from helper_functions import plot_predictions, plot_decision_boundary\n"
+    "from helper_functions import plot_predictions, plot_decision_boundary"
    ]
   },
   {
@@ -710,14 +706,14 @@
     "plot_decision_boundary(model_0, X_train, y_train)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Test\")\n",
-    "plot_decision_boundary(model_0, X_test, y_test)\n"
+    "plot_decision_boundary(model_0, X_test, y_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. attempt improving"
+    "# 5. attempt improving\n"
    ]
   },
   {
@@ -756,7 +752,7 @@
     "\n",
     "\n",
     "model_1 = CircleModelV1().to(device)\n",
-    "model_1\n"
+    "model_1"
    ]
   },
   {
@@ -766,7 +762,7 @@
    "outputs": [],
    "source": [
     "loss_fn = nn.BCEWithLogitsLoss()\n",
-    "optimizer = torch.optim.SGD(params=model_1.parameters(), lr=0.1)\n"
+    "optimizer = torch.optim.SGD(params=model_1.parameters(), lr=0.1)"
    ]
   },
   {
@@ -817,7 +813,7 @@
     "    if epoch % 100 == 0:\n",
     "        print(\n",
     "            f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test Loss: {test_loss:.5f}, Test Acc: {test_acc:.2f}%\"\n",
-    "        )\n"
+    "        )"
    ]
   },
   {
@@ -844,21 +840,21 @@
     "plot_decision_boundary(model_1, X_train, y_train)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Test\")\n",
-    "plot_decision_boundary(model_1, X_test, y_test)\n"
+    "plot_decision_boundary(model_1, X_test, y_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Non linearity"
+    "# 6. Non linearity\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1 recreating non-linear data"
+    "## 6.1 recreating non-linear data\n"
    ]
   },
   {
@@ -894,7 +890,7 @@
     "n_samples = 1000\n",
     "\n",
     "X, y = make_circles(n_samples, noise=0.03, random_state=91021)\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu)\n"
+    "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu)"
    ]
   },
   {
@@ -909,16 +905,14 @@
     "X = torch.from_numpy(X).type(torch.float)\n",
     "y = torch.from_numpy(y).type(torch.float)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=91021\n",
-    ")\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=91021)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.2 Non linear model"
+    "## 6.2 Non linear model\n"
    ]
   },
   {
@@ -1000,7 +994,7 @@
     "\n",
     "\n",
     "model_3 = CircleModelV2().to(device)\n",
-    "model_3.state_dict()\n"
+    "model_3.state_dict()"
    ]
   },
   {
@@ -1010,7 +1004,7 @@
    "outputs": [],
    "source": [
     "loss_fn = nn.BCEWithLogitsLoss()\n",
-    "optimizer = torch.optim.SGD(params=model_3.parameters(), lr=0.1)\n"
+    "optimizer = torch.optim.SGD(params=model_3.parameters(), lr=0.1)"
    ]
   },
   {
@@ -1030,7 +1024,7 @@
     }
    ],
    "source": [
-    "y_train[:10]\n"
+    "y_train[:10]"
    ]
   },
   {
@@ -1088,7 +1082,7 @@
     "    if epoch % 100 == 0:\n",
     "        print(\n",
     "            f\"Epoch: {epoch} | Loss: {loss:.5f}, Acc: {acc:.2f}% | Test Loss: {test_loss:.5f}, Test Acc: {test_acc:.2f}%\"\n",
-    "        )\n"
+    "        )"
    ]
   },
   {
@@ -1115,14 +1109,14 @@
     "plot_decision_boundary(model_3, X_train, y_train)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Test\")\n",
-    "plot_decision_boundary(model_3, X_test, y_test)\n"
+    "plot_decision_boundary(model_3, X_test, y_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-class classification"
+    "# Multi-class classification\n"
    ]
   },
   {
@@ -1177,7 +1171,7 @@
     ")\n",
     "\n",
     "plt.figure(figsize=(10, 7))\n",
-    "plt.scatter(X_blob[:, 0], X_blob[:, 1], c=y_blob, cmap=plt.cm.RdYlBu)\n"
+    "plt.scatter(X_blob[:, 0], X_blob[:, 1], c=y_blob, cmap=plt.cm.RdYlBu)"
    ]
   },
   {
@@ -1198,7 +1192,7 @@
    ],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "device\n"
+    "device"
    ]
   },
   {
@@ -1245,7 +1239,7 @@
     "\n",
     "\n",
     "model_4 = BlobModel(input_features=2, output_features=4, hidden_units=8).to(device)\n",
-    "model_4\n"
+    "model_4"
    ]
   },
   {
@@ -1255,7 +1249,7 @@
    "outputs": [],
    "source": [
     "loss_fn = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.SGD(model_4.parameters(), lr=0.1)\n"
+    "optimizer = torch.optim.SGD(model_4.parameters(), lr=0.1)"
    ]
   },
   {
@@ -1275,7 +1269,7 @@
     }
    ],
    "source": [
-    "model_4(X_blob_train.to(device))[0].shape, NUM_CLASSES\n"
+    "model_4(X_blob_train.to(device))[0].shape, NUM_CLASSES"
    ]
   },
   {
@@ -1421,7 +1415,7 @@
     "        test_loss = loss_fn(test_logits, y_blob_test)\n",
     "        test_acc = accuracy_fn(y_true=y_blob_test, y_pred=test_preds)\n",
     "\n",
-    "    print(f\"Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")\n"
+    "    print(f\"Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")"
    ]
   },
   {
@@ -1458,7 +1452,7 @@
     "    y_logits = model_4(X_blob_test)\n",
     "    y_preds = torch.softmax(y_logits, dim=1).argmax(dim=1)\n",
     "\n",
-    "y_logits[:10], y_preds[:10]\n"
+    "y_logits[:10], y_preds[:10]"
    ]
   },
   {
@@ -1484,7 +1478,7 @@
     "plot_decision_boundary(model_4, X_blob_train, y_blob_train)\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.title(\"Test\")\n",
-    "plot_decision_boundary(model_4, X_blob_test, y_blob_test)\n"
+    "plot_decision_boundary(model_4, X_blob_test, y_blob_test)"
    ]
   }
  ],
