--- a/PytorchZeroToMastery/1_WorkflowFundamentals.ipynb
+++ b/PytorchZeroToMastery/1_WorkflowFundamentals.ipynb
@@ -245,9 +245,7 @@
     "                track_epochs.append(epoch)\n",
     "                train_loss_values.append(loss.detach().numpy())\n",
     "                test_loss_values.append(test_loss.detach().numpy())\n",
-    "                print(\n",
-    "                    f\"Epoch: {epoch} | MAE Train Loss: {loss} | MAE Test Loss: {test_loss} \"\n",
-    "                )\n",
+    "                print(f\"Epoch: {epoch} | MAE Train Loss: {loss} | MAE Test Loss: {test_loss} \")\n",
     "\n",
     "    # Plot the loss curves\n",
     "    plt.plot(track_epochs, train_loss_values, label=\"Train loss\")\n",
@@ -716,9 +714,7 @@
     "            with torch.inference_mode():\n",
     "                y_preds = model(X_test)\n",
     "                test_loss = loss_fn(y_preds, y_test)\n",
-    "                print(\n",
-    "                    f\"Epoch: {epoch} | Train loss: {loss:.3f} | Test loss: {test_loss:.3f}\"\n",
-    "                )"
+    "                print(f\"Epoch: {epoch} | Train loss: {loss:.3f} | Test loss: {test_loss:.3f}\")"
    ]
   },
   {
@@ -1391,7 +1387,7 @@
     }
    ],
    "source": [
-    "loaded.state_dict()\n"
+    "loaded.state_dict()"
    ]
   }
  ],
