--- a/PytorchZeroToMastery/0_Fundamentals.ipynb
+++ b/PytorchZeroToMastery/0_Fundamentals.ipynb
@@ -23,6 +23,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -541,9 +561,7 @@
    ],
    "source": [
     "# Stack tensors on top of each other\n",
-    "x_stacked = torch.stack(\n",
-    "    [x, x, x, x], dim=0\n",
-    ")  # try changing dim to dim=1 and see what happens\n",
+    "x_stacked = torch.stack([x, x, x, x], dim=0)  # try changing dim to dim=1 and see what happens\n",
     "print(\"stacked tensor: \", x_stacked)\n",
     "print(\"shape: \", x_stacked.shape)"
    ]
